add stress test report + fix bugs
